# auxia-backend

./: .env.example  .gitignore  Makefile  README.md  files.txt  pyproject.toml  requirements.txt
auxia/: main.py  routers.py
auxia/controllers/: ai.py  answer.py  auth.py  user.py
auxia/core/: config.py  excepetions.py
auxia/db/: chroma.py  mongo.py
auxia/models/: answer.py  auth.py  base.py  user.py
auxia/schemas/: ai.py  answer.py  base.py  usuario.py
auxia/usecases/: ai.py  answer.py  auth.py  embedding.py  graph.py  user.py
static/: report.html
tests/: conftest.py  factories.py
tests/controllers/: test_ai.py  test_answer.py
tests/schemas/: test_ai.py  test_answer.py  test_usuario.py
tests/usecases/: test_ai.py  test_user.py
