[tool.poetry]
name = "auxia"
version = "0.0.1"
description = "Backend do programa Auxia de treinamento de IA utilizando RLHF"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pydantic-settings = "^2.8.1"
motor = "^3.7.0"
pre-commit = "^4.1.0"
httpx = "^0.28.1"
google-genai = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
